--- a/debug/sources/MVT-interactivity.html
+++ b/debug/sources/MVT-interactivity.html
@@ -37,9 +37,7 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-73.97720677029952, 40.77784846220871],
-      zoom: 13,
-
-
+      zoom: 13
     });
 
     const nav = new mapboxgl.NavigationControl({
