--- a/examples/animation/animate-by-date-range.html
+++ b/examples/animation/animate-by-date-range.html
@@ -16,7 +16,7 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Collisions in January 2019</h1>
+                <h1>Collisions in December 2018</h1>
             </header>
             <section>
                 <p class="description open-sans">Animate features by a date range</p>
@@ -36,7 +36,7 @@
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-122.33, 47.61],
-            zoom: 11,
+            zoom: 10,
             scrollZoom: false,
         });
 
@@ -63,6 +63,7 @@
                 20,
                 fade(0.5, 0.5)
             )
+            color: turquoise
             strokeWidth: 0
         `);
 
