--- a/examples/animation/add-feature-visibility.html
+++ b/examples/animation/add-feature-visibility.html
@@ -36,7 +36,7 @@
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-122.33, 47.61],
-            zoom: 11,
+            zoom: 10,
             scrollZoom: false,
         });
 
@@ -56,6 +56,7 @@
         const viz = new carto.Viz(`
             filter: animation($incdate, 20, fade(0.5, 0.5)) + 0.05
             width: 3
+            color: turquoise
             strokeWidth: 0
         `);
 
