--- a/examples/styling/scaled.html
+++ b/examples/styling/scaled.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Scaled width | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,27 @@
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
+
 <body>
   <div id="map"></div>
-    <aside class="toolbox">
-      <div class="box">
-        <header>
-          <h1>Scaled width</h1>
-        </header>
-        <section>
-          <p class="description open-sans">How to keep feature at constant widths in real meters</p>
-        </section>
-        <footer class="js-footer"></footer>
-      </div>
-    </aside>
-    <div id="loader">
-      <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
-        <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
-          <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
-        </svg>
-      </div>
+  <aside class="toolbox">
+    <div class="box">
+      <header>
+        <h1>Scaled width</h1>
+      </header>
+      <section>
+        <p class="description open-sans">Set features to constant widths in real meters</p>
+      </section>
+      <footer class="js-footer"></footer>
     </div>
+  </aside>
+  <div id="loader">
+    <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
+      <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
+        <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
+      </svg>
+    </div>
+  </div>
   <script>
     const map = new mapboxgl.Map({
       container: 'map',
@@ -69,4 +71,5 @@
     }
   </script>
 </body>
+
 </html>
