--- a/examples/styling/scaled.html
+++ b/examples/styling/scaled.html
@@ -35,11 +35,9 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.darkmatter,
-      center: [-73.96, 40.75],
+      center: [-123.1103, 49.2450],
       zoom: 14,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
@@ -47,14 +45,13 @@
     });
     map.addControl(nav, 'top-left');
 
-    // Define user
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
     });
 
     // Define layer
-    const source = new carto.source.Dataset('taxi_50k');
+    const source = new carto.source.Dataset('vancouver_trees');
     const viz = new carto.Viz(`
       // 3 pixels at zoom level 13
       // 6 pixels at zoom level 14
