--- a/examples/styling/zoom-range-style.html
+++ b/examples/styling/zoom-range-style.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Widths through zoom | CARTO</title>
+    <title>Style by zoom range | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <script src="../../dist/carto-vl.js"></script>
@@ -19,7 +19,7 @@
                 <h1>Symbolize features by zoom range</h1>
             </header>
             <section>
-                <p class="description open-sans">Set feature style properties through zoom</p>
+                <p class="description open-sans">Set feature style properties by a zoom range</p>
             </section>
             <footer class="js-footer"></footer>
         </div>
@@ -35,9 +35,9 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
-            center: [-73.96, 40.75],
+            center: [-123.1103, 49.2450],
             zoom: 12,
-            scrollZoom: false,
+            scrollZoom: false
         });
 
         const nav = new mapboxgl.NavigationControl({
@@ -50,7 +50,7 @@
             apiKey: 'default_public'
         });
 
-        const source = new carto.source.Dataset('taxi_50k');
+        const source = new carto.source.Dataset('vancouver_trees');
 
         const viz = new carto.Viz(`
             width: ramp(zoomrange([12,18]),[1,16])
