write full words for selection

--- a/examples/styling/draw-order.html
+++ b/examples/styling/draw-order.html
@@ -24,11 +24,11 @@
           <ul>
             <li>
               <input type="radio" name="style" onclick="setAscOrder()" id="Asc" checked>
-              <label for="Asc">Asc</label>
+              <label for="Asc">Ascending</label>
             </li>
             <li>
               <input type="radio" name="style" onclick="setDescOrder()" id="Desc">
-              <label for="Desc">Desc</label>
+              <label for="Desc">Descending</label>
             </li>
             <li>
               <input type="radio" name="style" onclick="setDefaultOrder()" id="Default">
