--- a/examples/advanced/hurricane-harvey.html
+++ b/examples/advanced/hurricane-harvey.html
@@ -39,9 +39,7 @@
       style: carto.basemaps.darkmatter,
       center: [-96, 30],
       zoom: 7,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
