--- a/examples/advanced/ocean-bathymetry.html
+++ b/examples/advanced/ocean-bathymetry.html
@@ -35,9 +35,7 @@
       style: carto.basemaps.darkmatter,
       center: [-20, 20],
       zoom: 2,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
