--- a/examples/advanced/taxi-pickups.html
+++ b/examples/advanced/taxi-pickups.html
@@ -35,9 +35,7 @@
       style: carto.basemaps.darkmatter,
       center: [-74.0032059, 40.7482066],
       zoom: 12,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
