--- a/examples/animation/animate-and-hold.html
+++ b/examples/animation/animate-and-hold.html
@@ -39,7 +39,7 @@
 			style: carto.basemaps.darkmatter,
 			center: [-122.33, 47.61],
 			zoom: 10,
-			scrollZoom: false,
+			scrollZoom: false
 		});
 
 		const nav = new mapboxgl.NavigationControl({
