--- a/examples/basemap/project-layer.html
+++ b/examples/basemap/project-layer.html
@@ -49,7 +49,7 @@
       },
       center: [0, 0],
       zoom: 1,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
