--- a/examples/basics/add-layer.html
+++ b/examples/basics/add-layer.html
@@ -37,7 +37,7 @@
       style: carto.basemaps.voyager,
       center: [0, 0],
       zoom: 1,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
