--- a/examples/basics/browser-support.html
+++ b/examples/basics/browser-support.html
@@ -49,7 +49,7 @@
         style: carto.basemaps.voyager,
         center: [0, 0],
         zoom: 1,
-        scrollZoom: false,
+        scrollZoom: false
       });
 
       carto.setDefaultAuth({
