--- a/examples/interactivity/interact-multiple-layers.html
+++ b/examples/interactivity/interact-multiple-layers.html
@@ -43,7 +43,7 @@
       style: carto.basemaps.voyager,
       center: [0, 43],
       zoom: 4,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
