--- a/examples/sources/external-geojson.html
+++ b/examples/sources/external-geojson.html
@@ -35,9 +35,7 @@
       style: carto.basemaps.voyager,
       center: [-77.04, 38.89],
       zoom: 9,
-      scrollZoom: true,
-
-
+      scrollZoom: true
     });
 
     const nav = new mapboxgl.NavigationControl({
