--- a/examples/styling/filter.html
+++ b/examples/styling/filter.html
@@ -37,7 +37,7 @@
       style: carto.basemaps.darkmatter,
       center: [0, 30],
       zoom: 2,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
