--- a/examples/styling/style-by-number.html
+++ b/examples/styling/style-by-number.html
@@ -61,7 +61,7 @@
       style: carto.basemaps.voyager,
       center: [-100.3710, 38.4793],
       zoom: 3.5,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
