--- a/examples/styling/viewport.html
+++ b/examples/styling/viewport.html
@@ -37,7 +37,7 @@
       style: carto.basemaps.darkmatter,
       center: [2.1734, 41.3851],
       zoom: 12,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
