--- a/debug/aggregation/viewportAggPluto.html
+++ b/debug/aggregation/viewportAggPluto.html
@@ -36,7 +36,7 @@
       style: carto.basemaps.voyager,
       center: [-73.98076101209858, 40.751681063],
       zoom: 13,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
