--- a/debug/basic/layer-visibility.html
+++ b/debug/basic/layer-visibility.html
@@ -59,9 +59,7 @@
       style: carto.basemaps.voyager,
       center: [0, 43],
       zoom: 4,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
