--- a/debug/interactivity/enter-leave.html
+++ b/debug/interactivity/enter-leave.html
@@ -40,7 +40,7 @@
       style: carto.basemaps.voyager,
       center: [-0.127, 51.507],
       zoom: 10,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
