--- a/debug/interactivity/interactive-based-styling.html
+++ b/debug/interactivity/interactive-based-styling.html
@@ -42,7 +42,7 @@
       style: carto.basemaps.voyager,
       center: [0, 30],
       zoom: 1.5,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
