--- a/examples/advanced/us-population-by-county.html
+++ b/examples/advanced/us-population-by-county.html
@@ -35,9 +35,7 @@
       style: carto.basemaps.darkmatter,
       center: [-99.6404893, 38.5480718],
       zoom: 4,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
