--- a/examples/basemap/color-map-background.html
+++ b/examples/basemap/color-map-background.html
@@ -49,7 +49,7 @@
       },
       center: [0, 0],
       zoom: 2,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
