--- a/examples/interactivity/click.html
+++ b/examples/interactivity/click.html
@@ -38,9 +38,7 @@
       style: carto.basemaps.voyager,
       center: [-0.127, 51.507],
       zoom: 10,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
