--- a/examples/interactivity/pop-up-on-hover.html
+++ b/examples/interactivity/pop-up-on-hover.html
@@ -37,7 +37,7 @@
             style: carto.basemaps.voyager,
             center: [0, 30],
             zoom: 1.5,
-            scrollZoom: false,
+            scrollZoom: false
         });
 
         const nav = new mapboxgl.NavigationControl({
