--- a/examples/sources/multiple-layers.html
+++ b/examples/sources/multiple-layers.html
@@ -35,9 +35,7 @@
       style: carto.basemaps.voyager,
       center: [0, 43],
       zoom: 4,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
