--- a/examples/sources/select-layer.html
+++ b/examples/sources/select-layer.html
@@ -54,9 +54,7 @@
       style: carto.basemaps.voyager,
       center: [0, 30],
       zoom: 2,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
