--- a/examples/styling/draw-order.html
+++ b/examples/styling/draw-order.html
@@ -53,7 +53,7 @@
       style: carto.basemaps.voyager,
       center: [2.1734, 41.3851],
       zoom: 14,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
