--- a/examples/styling/style-by-category.html
+++ b/examples/styling/style-by-category.html
@@ -53,7 +53,7 @@
       style: carto.basemaps.darkmatter,
       center: [2.1734, 41.3851],
       zoom: 13,
-      scrollZoom: false,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
