--- a/examples/advanced/taxi-pickups.html
+++ b/examples/advanced/taxi-pickups.html
@@ -41,7 +41,9 @@
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
+    const fullScreen = new mapboxgl.FullscreenControl(); 
     map.addControl(nav, 'top-left');
+    map.addControl(fullScreen, 'top-left');
 
     // Define user
     carto.setDefaultAuth({
