--- a/debug/labels/labels-points-size-zoom.html
+++ b/debug/labels/labels-points-size-zoom.html
@@ -11,7 +11,7 @@
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
 
-  <link href="../examples/style.css" rel="stylesheet">
+  <link href="../../examples/style.css" rel="stylesheet">
 </head>
 
 <body>
