--- a/debug/images/category-to-image.html
+++ b/debug/images/category-to-image.html
@@ -5,7 +5,7 @@
     <script src="../../../dist/carto-vl.js"></script>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" type="text/css" href="../../examples/style.css">
 </head>
 
 <body>
